# MainAdmin

./: .gitignore  README.md  docker-compose.yml  init-letsencrypt.sh
backend/: .dockerignore  Dockerfile  access_token.txt  docker-entrypoint.sh  pyproject.toml  refresh_token.txt
backend/config/: celery.py  settings.py  urls.py
backend/src/mailing/: .task.py.swn  .task.py.swo  admin.py  apps.py  models.py  signals.py  task.py
backend/src/mailing/migrations/: 0001_initial.py
backend/src/telegram_bot/: admin.py  models.py  views.py
backend/src/telegram_bot/migrations/: 0001_initial.py  0002_alter_commandmsg_link.py
backend/src/telegram_user/: admin.py  apps.py  error_const.py  message_const.py  models.py  serializer.py  task.py
backend/src/telegram_user/api/: urls.py
backend/src/telegram_user/api/v1/: urls.py  views.py
backend/src/telegram_user/migrations/: 0001_initial.py  0002_telegramuser_subcribed_to_web.py  0003_add_users_mesaage.py  0004_telegramuser_onboarding_complete.py  0005_crmmessage.py  0006_crmmessage_created_at.py
backend/src/webinar/: admin.py  apps.py  models.py  serializer.py  task.py
backend/src/webinar/api/: urls.py
backend/src/webinar/api/v1/: urls.py  views.py
backend/src/webinar/migrations/: 0001_initial.py  0002_remove_webinar_content_remove_webinar_description_and_more.py  0003_remove_webinar_calendar_link_and_more.py  0004_webinar_description_webinar_format.py  0005_rename_format_webinar_web_format.py
nginx/local/: nginx.conf
